<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_small"
    android:paddingEnd="@dimen/margin_x_large"
    android:paddingStart="@dimen/margin_x_large"
    android:paddingTop="@dimen/margin_x_large">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:textSize="@dimen/line_info_text_size" />


        <TextView
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x_small"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:textSize="@dimen/line_info_text_size" />
    </LinearLayout>


    <TextView
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoLayout"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="start|center_vertical"
        android:textSize="@dimen/para_text_size"
        android:textStyle="italic" />


</RelativeLayout>